--- a/consumer-service/pom.xml
+++ b/consumer-service/pom.xml
@@ -22,7 +22,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<swagger-maven-plugin.version>3.1.3</swagger-maven-plugin.version>
+
+		<!-- Plugins -->
+		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
 		
+		<!-- Dependencies -->
+		<swagger.version>1.5.9</swagger.version>
 		<springfox.swagger.version>2.6.1</springfox.swagger.version>
 	</properties>
 
@@ -74,11 +80,46 @@
 		</dependency>
 	</dependencies>
 	
+	<profiles>
+		<profile>
+			<id>multiversion-swagger-war</id>
+			<properties>
+				<packaging.type>war</packaging.type>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<finalName>${project.artifactId}</finalName>
+				<plugins>
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<artifactId>maven-clean-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -121,6 +162,63 @@
 					</execution>
 				</executions>
 			</plugin> 
+			<plugin>
+				<groupId>com.github.kongchen</groupId>
+				<artifactId>swagger-maven-plugin</artifactId>
+				<version>${swagger-maven-plugin.version}</version>
+				<configuration>
+					<apiSources>
+						Version 1
+						<apiSource>
+							<springmvc>false</springmvc>
+							<locations>com.asimio.swaggerexample.rest.v1</locations>
+							<schemes>http,https</schemes>
+							<basePath>/api</basePath>
+							<info>
+								<title>Data Consumer service - Version 1</title>
+								<version>v1</version>
+								<description>A multi-version demo (version 1) of a RESTful service using Spring Boot, and Swagger.</description>
+								<termsOfService>http://www.github.com/kongchen/swagger-maven-plugin</termsOfService>
+								<license>
+									<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+									<name>Apache 2.0</name>
+								</license>
+							</info>
+							<outputFormats>json</outputFormats>
+							<swaggerDirectory>${basedir}/target/classes/static/v1</swaggerDirectory>
+							<swaggerApiReader>com.github.kongchen.swagger.docgen.reader.JaxrsReader</swaggerApiReader>
+						</apiSource>
+						Version 2
+						<apiSource>
+							<springmvc>false</springmvc>
+							<locations>com.asimio.swaggerexample.rest.v2</locations>
+							<schemes>http,https</schemes>
+							<basePath>/api</basePath>
+							<info>
+								<title>Data Consumer service - Version 2</title>
+								<version>v2</version>
+								<description>A multi-version demo (version 2) of a RESTful service using Spring Boot, and Swagger.</description>
+								<termsOfService>http://www.github.com/kongchen/swagger-maven-plugin</termsOfService>
+								<license>
+									<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+									<name>Apache 2.0</name>
+								</license>
+							</info>
+							<outputFormats>json</outputFormats>
+							<swaggerDirectory>${basedir}/target/classes/static/v2</swaggerDirectory>
+							<swaggerApiReader>com.github.kongchen.swagger.docgen.reader.JaxrsReader</swaggerApiReader>
+						</apiSource>
+					</apiSources>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
