OAuth incorporated for security

--- a/consumer-service/src/main/resources/application.properties
+++ b/consumer-service/src/main/resources/application.properties
@@ -5,3 +5,12 @@ server.address=localhost
 
  # Server HTTP port.
 server.port=8080
+
+#OAuth2 configuration
+security.user.name=jags
+security.user.password=Sr33n!
+security.oauth2.client.client-id=Leel
+security.oauth2.client.client-secret=Elec
+security.oauth2.authorization.checkTokenAccess=isAuthenticated()
+
+logging.level.org.springframework.security=DEBUG
