--- a/consumer-service/pom.xml
+++ b/consumer-service/pom.xml
@@ -37,6 +37,30 @@
 		   <groupId>org.springframework.boot</groupId>
 		   <artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+				
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-crypto</artifactId>
+		    <!-- <version>4.2.3.RELEASE</version> -->
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-consul-all -->
+<!-- 		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-consul-all</artifactId>
+		    <version>1.2.1.RELEASE</version>
+		</dependency> -->
 		
 		<!-- Swagger -->		
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
